# bert-gokart

./: .gitignore  Makefile  README.md  bert.py  finetune-classification-task-on-bert.ipynb  finetune-with-transformers.ipynb  pyproject.toml
tasks/data/: convert.py  dataset.py  livedoor.py
