[tool.poetry]
name = "bert-gokart"
version = "0.1.0"
description = ""
authors = ["Koichi Miyamoto <m5813k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jupyterlab = "^3.1.6"
ipywidgets = "^7.6.3"
torch = "^1.9.0"
transformers = "^4.9.2"
gokart = "^1.0.2"
thunderbolt = "^0.1.0"
sentencepiece = "^0.1.96"
datasets = "^1.11.0"
sklearn = "^0.0"
redshells = "^0.1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
